--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev --turbopack -p 3000",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3000",
+    "render-build": "npm run build",
+    "render-start": "npm run start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
