--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,33 @@
 # =============================================================================
-# MONGODB DOCKER COMPOSE CONFIGURATION
+# DOCKER COMPOSE FOR CHOUIEUR EXPRESS LOCAL DEVELOPMENT
 # =============================================================================
 # 
-# This file sets up a MongoDB container for local development.
-# The database will persist data in ./data/db directory.
+# This docker-compose file sets up the complete development environment
+# including MongoDB, backend, and frontend services.
 # 
 # USAGE:
 # ======
-# Start MongoDB: docker-compose up -d
-# Stop MongoDB:  docker-compose down
-# View logs:     docker-compose logs -f
+# Start all services: docker-compose up -d
+# Stop all services:  docker-compose down
+# View logs:          docker-compose logs -f
 # 
-# FOR RENDER DEPLOYMENT:
-# =====================
-# In production, Render will connect to a remote MongoDB instance (MongoDB Atlas).
-# Update the MONGO_URI environment variable in Render dashboard to point to your
-# production MongoDB instance instead of localhost.
+# SERVICES:
+# =========
+# - mongodb: Local MongoDB instance for development
+# - backend: Express API server
+# - frontend: Next.js application
+#
 
 version: '3.8'
 
 services:
+  # =============================================================================
+  # MONGODB DATABASE
+  # =============================================================================
   mongodb:
     image: mongo:7.0
-    container_name: myapp-mongo
-    restart: always
+    container_name: chouieur-mongodb
+    restart: unless-stopped
     ports:
       - "27017:27017"
     environment:
@@ -31,33 +35,68 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: password123
       MONGO_INITDB_DATABASE: myapp_db
     volumes:
-      - ./data/db:/data/db
-      - ./data/configdb:/data/configdb
+      - mongodb_data:/data/db
+      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
     networks:
-      - myapp-network
+      - chouieur-network
 
+  # =============================================================================
+  # BACKEND API SERVER
+  # =============================================================================
+  backend:
+    build:
+      context: ./server
+      dockerfile: Dockerfile
+    container_name: chouieur-backend
+    restart: unless-stopped
+    ports:
+      - "5000:5000"
+    environment:
+      - NODE_ENV=development
+      - PORT=5000
+      - MONGO_URI=mongodb://admin:password123@mongodb:27017/myapp_db?authSource=admin
+      - CLIENT_URL=http://localhost:3000
+    depends_on:
+      - mongodb
+    volumes:
+      - ./server:/app
+      - /app/node_modules
+    networks:
+      - chouieur-network
+
+  # =============================================================================
+  # FRONTEND APPLICATION
+  # =============================================================================
+  frontend:
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    container_name: chouieur-frontend
+    restart: unless-stopped
+    ports:
+      - "3000:3000"
+    environment:
+      - NODE_ENV=development
+      - NEXT_PUBLIC_API_URL=http://localhost:5000
+    depends_on:
+      - backend
+    volumes:
+      - ./client:/app
+      - /app/node_modules
+      - /app/.next
+    networks:
+      - chouieur-network
+
+# =============================================================================
+# VOLUMES
+# =============================================================================
+volumes:
+  mongodb_data:
+    driver: local
+
+# =============================================================================
+# NETWORKS
+# =============================================================================
 networks:
-  myapp-network:
+  chouieur-network:
     driver: bridge
-
-# =============================================================================
-# BACKUP AND RESTORE COMMANDS
-# =============================================================================
-# 
-# Backup MongoDB:
-# docker exec myapp-mongo mongodump --db myapp_db --out /data/backup
-# docker cp myapp-mongo:/data/backup ./backup
-# 
-# Restore MongoDB:
-# docker cp ./backup myapp-mongo:/data/backup
-# docker exec myapp-mongo mongorestore --db myapp_db /data/backup/myapp_db
-# 
-# =============================================================================
-# CHANGING MONGODB LOCATION
-# =============================================================================
-# 
-# To use a different MongoDB instance:
-# 1. Update MONGO_URI in .env file
-# 2. For MongoDB Atlas: Use connection string from Atlas dashboard
-# 3. For another PC: Use the IP address instead of localhost
-# 4. Restart your application
