--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "build": "echo 'No build step required for Express server'",
+    "render-postbuild": "echo 'Post-build step completed'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
