--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack -p 3000",
     "build": "next build",
     "start": "next start -p 3000",
-    "render-build": "npm run build",
+    "render-build": "npm ci && npm run build",
     "render-start": "npm run start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
