--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack -p 3000",
     "build": "next build",
     "start": "next start -p 3000",
-    "render-build": "npm ci && npm run build",
+    "render-build": "npm ci && npm run build && echo 'Build completed successfully'",
     "render-start": "npm run start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
@@ -61,8 +61,6 @@
   },
   "devDependencies": {
     "genkit-cli": "^1.20.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "tsx": "^4.19.2"
   }
 }
