--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev --turbopack -p 3000",
     "build": "next build",
     "start": "next start -p 3000",
-    "render-build": "npm ci && npm run build && echo 'Build completed successfully'",
-    "render-start": "npm run start",
+    "render-build": "npm ci && npm run build && node scripts/verify-build.js",
+    "render-start": "node scripts/verify-build.js && npm run start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
