--- a/package.json
+++ b/package.json
@@ -41,10 +41,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "genkit": "^1.20.0",
+    "googleapis": "^163.0.0",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.8.4",
     "next": "15.3.3",
