Add: Complete backend with Google Sheets integration and Render deployment ready

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start -p ${PORT:-3000}",
     "render-build": "npm ci && npm run build",
     "render-start": "npm run start",
+    "backend": "node index.js",
+    "backend:dev": "nodemon index.js",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
@@ -41,11 +43,15 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "embla-carousel-react": "^8.6.0",
+    "express": "^4.19.2",
     "firebase": "^11.9.1",
     "genkit": "^1.20.0",
     "googleapis": "^163.0.0",
+    "helmet": "^7.1.0",
+    "morgan": "^1.10.0",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.8.4",
     "next": "15.3.3",
@@ -62,6 +68,7 @@
   },
   "devDependencies": {
     "genkit-cli": "^1.20.0",
+    "nodemon": "^3.1.4",
     "tsx": "^4.19.2"
   }
 }
