Fix Render deployment: Add render.yaml and update package.json scripts to prevent Next.js auto-detection

--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "scripts": {
     "dev": "next dev --turbopack -p 3000",
     "build": "next build",
-    "start": "next start -p ${PORT:-3000}",
-    "render-build": "npm ci && npm run build",
-    "render-start": "npm run start",
+    "start": "node index.js",
+    "start:backend": "node index.js",
+    "start:frontend": "next start",
+    "frontend": "next start",
+    "render-build": "npm ci",
+    "render-start": "node index.js",
     "backend": "node index.js",
     "backend:dev": "nodemon index.js",
     "lint": "next lint",
