--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,8 @@ services:
     env: node
     buildCommand: npm ci
     startCommand: node index.js
+    healthCheckPath: /api/health
+    plan: free
     envVars:
       - key: NODE_ENV
         value: production
