--- a/render.yaml
+++ b/render.yaml
@@ -6,6 +6,8 @@ services:
     startCommand: node index.js
     healthCheckPath: /api/health
     plan: free
+    autoDeploy: true
+    region: oregon
     envVars:
       - key: NODE_ENV
         value: production
