Implement complete Google Sheets database integration
- Set up Google Sheets as primary database for all data
- Updated backend API to save orders to Google Sheets
- Enhanced order creation with unique IDs and complete data structure
- Added OrderItems sheet for detailed order tracking
- Updated frontend to use Google Sheets API instead of Firestore
- Created useMenuItems hook for dynamic menu loading
- Added comprehensive deployment guides and scripts
- Fixed all Google Sheets integration issues
- Orders now properly saved to Orders and OrderItems sheets
- Menu items loaded from Google Sheets database

--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "scripts": {
     "dev": "next dev --turbopack -p 3000",
     "build": "next build",
-    "start": "node index.js",
+    "start": "next start -p ${PORT:-3000}",
     "start:backend": "node index.js",
-    "start:frontend": "next start",
-    "frontend": "next start",
-    "render-build": "npm ci",
-    "render-start": "node index.js",
+    "start:frontend": "next start -p ${PORT:-3000}",
+    "frontend": "next start -p ${PORT:-3000}",
+    "render-build": "npm ci && npm run build",
+    "render-start": "next start -p ${PORT:-3000}",
     "backend": "node index.js",
     "backend:dev": "nodemon index.js",
     "lint": "next lint",
@@ -45,8 +45,8 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^3.6.0",
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.6.1",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.19.2",
@@ -54,10 +54,11 @@
     "genkit": "^1.20.0",
     "googleapis": "^163.0.0",
     "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.8.4",
+    "morgan": "^1.10.0",
     "next": "15.3.3",
+    "node-fetch": "^3.3.2",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
