--- a/package.json
+++ b/package.json
@@ -51,12 +51,14 @@
     "embla-carousel-react": "^8.6.0",
     "express": "^4.19.2",
     "firebase": "^11.9.1",
+    "firebase-admin": "^12.0.0",
     "genkit": "^1.20.0",
     "googleapis": "^163.0.0",
     "helmet": "^7.1.0",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.8.4",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "next": "15.3.3",
     "node-fetch": "^3.3.2",
     "patch-package": "^8.0.0",
@@ -68,6 +70,7 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5",
+    "uuid": "^9.0.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
