--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack -p 3000",
     "build": "next build",
-    "start": "next start -p ${PORT:-3000}",
+    "start": "next start",
     "backend": "node index.js",
     "backend:hybrid": "node index-hybrid.js",
     "backend:live": "node index-live.js",
